# interview-agent_V2

./: .cursorignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  INTEGRATION.md  README.md  RESUME_SERVICE_MIGRATION_ANALYSIS.md  TESTING.md  check_services.py  docker-compose.yml  nginx.conf  requirements.txt
services/admin-service/: .env.example  Dockerfile  pyproject.toml
services/feedback-service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  test_session_data.json
services/feedback-service/app/: main.py
services/feedback-service/app/core/: database.py
services/feedback-service/app/models/: feedback_report.py  score.py
services/feedback-service/app/services/: llm_feedback.py
services/interview-service/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  PINECONE_IMPLEMENTATION.md  README.md  REST_PINECONE_IMPLEMENTATION.md  alembic.ini  beat.py  entrypoint.sh  env.example  import_datasets_via_api.py  live_testing.py  pinecone_example.py  pyproject.toml  requirements.txt  run_service.py  run_supabase_migration.py  start_service.py  start_worker.bat  start_worker.sh  supabase_migration.sql  test_codebase.py  test_comprehensive_system.py  test_dataset_import.py  test_db_connection.py  test_dynamic_followup.py  test_feedback_integration.py  test_interview_service.py  test_pinecone.py  test_service_connectivity.py  upload_datasets_to_pinecone.py  worker.py
services/interview-service/alembic/: env.py
services/interview-service/alembic/versions/: 001_add_session_questions.py  002_add_feedback_system.py
services/interview-service/app/: __init__.py  main.py
services/interview-service/app/core/: config.py  database.py  dataset_mapping.py  logging.py  security.py  settings.py
services/interview-service/app/dependencies/: auth.py
services/interview-service/app/models/: __init__.py  base.py  feedback_report.py  followup_template.py  module.py  question.py  response.py  score.py  session.py  session_question.py
services/interview-service/app/routers/: __init__.py  datasets.py  feedback.py  followup.py  health.py  modules.py  sessions.py  vector_search.py  vectors.py
services/interview-service/app/schemas/: feedback.py  followup.py  health.py  interview.py  module.py  question.py  session.py  user.py  vector.py
services/interview-service/app/scripts/: import_datasets.py
services/interview-service/app/services/: __init__.py  celery_service.py  celery_tasks.py  db_event_listener.py  dynamic_followup_service.py  embedding_service.py  followup_service.py  pinecone_service.py  resume_service.py  session_service.py  supabase_service.py  sync_trigger.py  vector_sync_service.py
services/interview-service/app/tasks/: __init__.py  feedback.py
services/media-service/: .env.example  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt  run.py  test_audio.webm  test_basic.py  test_comprehensive.py  test_role_compliance.py  test_upload.py
services/media-service/app/: __init__.py  main.py
services/media-service/app/core/: __init__.py  config.py  database.py  logging.py
services/media-service/app/models/: __init__.py  media.py
services/media-service/app/routers/: __init__.py  media.py  monitoring.py
services/media-service/app/schemas/: __init__.py  media.py
services/media-service/app/services/: __init__.py  (+4 more)
services/resume-service/: .env.example  Dockerfile  ENHANCED_API_README.md  ENHANCED_PARSING_IMPLEMENTATION.md  README.md  complete_integration_explanation.py  debug_skills.py  demonstrate_integration_flow.py  env.example  main.py  pyproject.toml  requirements.txt  sample_stored_resume.json  show_resume_analysis.py  test_comprehensive.py  test_comprehensive_parsing.py  test_domain_taxonomy.py  test_enhanced_api.py  test_enhanced_domain_parsing.py  test_enhanced_parsing.py  test_enhanced_system.py  test_full_service.py  test_llm_integration.py  test_llm_pipeline.py  test_output.json  test_pdf_workflow.py  test_pipeline.py  test_real_resume.py  test_resume_workflow.py
services/resume-service/app/: __init__.py  api.py  enhanced_resume_processor.py  main.py  resume_processor.py
services/resume-service/config/: domain_taxonomy.json
services/resume-service/patterns/: projects.json  skills.json
services/resume-service/src/: api.py  resume_processor.py  schema.py
services/transcription-service/: .env.example  Dockerfile  README.md  audio_analysis_utility.py  audio_file_analysis.py  comprehensive_interview_test.py  debug_deduplication.py  debug_personas.py  env.example  example_hybrid_stt.py  init_database.py  interactive_interview_with_tts.py  interview_history_voice_interview_1751912657.json  mock_interview_mock_interview_1752845795.json  pyproject.toml  requirements.txt  run.py  setup_database.py  setup_testing.py  start.bat  start.sh  test_audio_capture_persona.py  test_basic.py  test_chunked_api.py  test_chunked_transcription.py  test_comprehensive_service.py  test_db_connection.py  test_endpoints.py  test_enhanced_stt_tts.py  test_groq_integration.py  test_integration_comprehensive.py  test_live_mock_interview.py  test_persona_parsing.py  test_requirements.txt  test_service_db.py  test_transcription_service.py  test_voice_assignment.py  test_windows_auth.py
services/transcription-service/app/: __init__.py  main.py  models.py
services/transcription-service/docs/: cross_service_integration.md  database_schema.md
services/transcription-service/interview_logs/: interview_log_test_interview_1751912216.json
services/transcription-service/personas/: base_personas.txt
services/transcription-service/test-assets/: README.md  generate_test_audio.py
services/user-service/: .env.example  Dockerfile  README.md  env.example  manual_test.py  pyproject.toml  pytest.ini  requirements.txt  seed_users.py  test_api_manual.py  test_basic.py  test_runner.py
services/user-service/app/: __init__.py  dependencies.py  main.py
services/user-service/supabase/: config.toml
services/user-service/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_existing_user.py  test_integration.py  test_users.py
(+176 files in other folders)
