[tool.poetry]
name = "interview-service"
version = "0.1.0"
description = "TalentSync Interview Service - Module management and session orchestration"
authors = ["TalentSync Team <team@talentsync.ai>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
sqlalchemy = ">=2.0"
alembic = "*"
asyncpg = "*"
pydantic = ">=2.0"
pydantic-settings = "*"
python-dotenv = "*"
aioredis = "*"
pinecone = "*"
openai = "*"
# Celery and background task processing
celery = "*"
redis = "*"
# Machine learning and text processing
sentence-transformers = "*"
numpy = "*"
scikit-learn = "*"
# Additional utilities
prometheus-client = "*"
websockets = "*"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
