[tool.poetry]
name = "media-service"
version = "0.1.0"
description = "TalentSync Media Service for chunked audio recording and management"
authors = ["TalentSync Team"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.100.0"
uvicorn = {extras = ["standard"], version = ">=0.20.0"}
sqlalchemy = ">=2.0.0"
alembic = ">=1.12.0"
aiosqlite = ">=0.19.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
python-multipart = ">=0.0.6"
aiofiles = ">=23.0.0"
celery = ">=5.3.0"
redis = ">=5.0.0"
prometheus-client = ">=0.19.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
httpx = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.1.0"
mypy = ">=1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
