[tool.poetry]
name = "resume-service"
version = "1.0.0"
description = "Unified text-to-JSON resume parsing pipeline"
authors = ["TalentSync Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pypdf = "^3.17.0"
python-docx = "^1.1.0"
python-multipart = "^0.0.6"
spacy = "^3.7.0"
dateparser = "^1.2.0"
phonenumbers = "^8.13.0"
email-validator = "^2.1.0"
thefuzz = "^0.22.0"
python-levenshtein = "^0.25.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
