[tool.poetry]
name = "resume-service"
version = "1.0.0"
description = "Unified text-to-JSON resume parsing pipeline"
authors = ["TalentSync Team"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
pypdf = "*"
python-docx = "*"
python-multipart = "*"
spacy = "*"
dateparser = "*"
phonenumbers = "*"
email-validator = "*"
thefuzz = "*"
python-levenshtein = "*"
openai = "*"
python-dotenv = "*"
aiofiles = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
