[tool.poetry]
name = "transcription-service"
version = "0.1.0"
description = "Transcription service with chunked audio processing and persona integration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.19"
databases = "^0.6.0"
pydantic = "^1.10.11"
openai = "^0.27.0"
aiofiles = "^23.1.0"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
