[tool.poetry]
name = "transcription-service"
version = "0.1.0"
description = "Transcription service with chunked audio processing and persona integration"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
databases = "*"
pydantic = "*"
openai = "*"
aiofiles = "*"
httpx = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
